# UA-ECT

./: README.md
1ºAno/ALGA/: README.md
1ºAno/C1/: README.md
1ºAno/C2/: README.md
1ºAno/ISD/: README.md
1ºAno/LABI/: README.md
1ºAno/LABI/ap1/: bilbiografia.txt
1ºAno/LSD/: README.md
1ºAno/MD/: README.md
1ºAno/P1/: README.md
1ºAno/P2/: README.md
2ºAno/AC1/: README.md
2ºAno/AC2/: README.md
2ºAno/ALGC/: README.md
2ºAno/LFA/: README.md
2ºAno/MCE/: README.md
2ºAno/MPEI/: README.md
2ºAno/P3/: README.md
2ºAno/SE/: README.md
3ºAno/AMS/: README.md
3ºAno/AR/: README.md
3ºAno/BD/: README.md
3ºAno/FR/: README.md
3ºAno/IHC/: README.md
3ºAno/IIA/: README.md
3ºAno/PEI/: README.md
3ºAno/SO/: README.md
3ºAno/SO/sofs20-so04/src/: .gitignore  CMakeLists.txt
3ºAno/SO/sofs20-so04/src/core/: CMakeLists.txt  exception.cpp  rawdisk.cpp  sizes.cpp
3ºAno/SO/sofs20-so04/src/daal/: CMakeLists.txt  daal_DBP.cpp  daal_IT.cpp  daal_OC.cpp  daal_RT.cpp  daal_SB.cpp  daal_inode.cpp
3ºAno/SO/sofs20-so04/src/devtools/: CMakeLists.txt  binselection.cpp  blockviews.cpp  probing.cpp  showblock.cpp
3ºAno/SO/sofs20-so04/src/direntries/: CMakeLists.txt  add_direntry.cpp  check_dir_empty.cpp  delete_direntry.cpp  get_direntry.cpp  rename_direntry.cpp  traverse_path.cpp
3ºAno/SO/sofs20-so04/src/fileblocks/: CMakeLists.txt  alloc_fileblock.cpp  free_fileblocks.cpp  get_fileblock.cpp  read_fileblock.cpp  write_fileblock.cpp
3ºAno/SO/sofs20-so04/src/freedatablocks/: CMakeLists.txt  alloc_data_block.cpp  deplete_insertion_cache.cpp  free_data_block.cpp  replenish_retrieval_cache.cpp
3ºAno/SO/sofs20-so04/src/freeinodes/: CMakeLists.txt  alloc_inode.cpp  free_inode.cpp
3ºAno/SO/sofs20-so04/src/grp_src/grp_direntries/: .gitignore  grp_add_direntry.cpp  grp_check_dir_empty.cpp  grp_delete_direntry.cpp  grp_get_direntry.cpp  grp_rename_direntry.cpp  grp_traverse_path.cpp
3ºAno/SO/sofs20-so04/src/grp_src/grp_fileblocks/: .gitignore  grp_alloc_fileblock.cpp  grp_free_fileblocks.cpp  grp_get_fileblock.cpp  grp_read_fileblock.cpp  grp_write_fileblock.cpp
3ºAno/SO/sofs20-so04/src/grp_src/grp_freedatablocks/: .gitignore  grp_alloc_data_block.cpp  grp_deplete_insertion_cache.cpp  grp_free_data_block.cpp  grp_replenish_retrieval_cache.cpp
3ºAno/SO/sofs20-so04/src/grp_src/grp_freeinodes/: .gitignore  grp_alloc_inode.cpp  grp_free_inode.cpp
3ºAno/SO/sofs20-so04/src/grp_src/grp_mksofs/: .gitignore  grp_mksofs_CS.cpp  grp_mksofs_FIT.cpp  grp_mksofs_FRD.cpp  grp_mksofs_FRT.cpp  grp_mksofs_FSB.cpp  grp_mksofs_RFDB.cpp
3ºAno/SO/sofs20-so04/src/mksofs/: CMakeLists.txt  mksofs_CS.cpp  mksofs_FIT.cpp  mksofs_FRD.cpp  mksofs_FRT.cpp  mksofs_FSB.cpp  mksofs_RFDB.cpp  mksofs_main.cpp
3ºAno/SO/sofs20-so04/src/sofsmount/: CMakeLists.txt  sofsmount.cpp
3ºAno/SO/sofs20-so04/src/syscalls/: CMakeLists.txt  link.cpp  mkdir.cpp  mknod.cpp  read.cpp  readdir.cpp  readlink.cpp  rename.cpp  rmdir.cpp  symlink.cpp  syscalls_others.cpp  truncate.cpp  unlink.cpp  write.cpp
3ºAno/SO/sofs20-so04/src/testtool/: CMakeLists.txt  testtool.cpp  testtool_core.cpp  testtool_direntries.cpp  testtool_fileblocks.cpp  testtool_freedatablocks.cpp  testtool_freeinodes.cpp  testtool_inodeattrs.cpp  testtool_msgs.cpp
4ºAno/AAD/: README.md
4ºAno/AC/: README.md
4ºAno/ASE/: README.md
4ºAno/CM/: README.md
4ºAno/EGS/: README.md
4ºAno/IC/: README.md
4ºAno/MDRS/: README.md
4ºAno/RSA/: README.md
4ºAno/SD/: README.md
4ºAno/SRC/: README.md
5ºAno/TC/: README.md
5ºAno/TPR/: README.md
Cenas/p01/: a.out  program.c
Cenas/p02/: a.out  hanoi.c
Cenas/p03/: a.out  p03.c
Cenas/p04/: a.out
Cenas/p05/: BubbleSort.c  a.out
Cenas/p06/: Max.c
(+3396 files in other folders)
